--- a/k8s/frontend-deployment.yml
+++ b/k8s/frontend-deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: chatapp-frontend
-        image: trainwithshubham/chatapp-frontend
+        image: omjaju18/chat_app_frontend:latest
         ports:
         - containerPort: 80
         env:
