--- a/k8s/mongodb-deployment.yml
+++ b/k8s/mongodb-deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: chatapp-mongodb
-        image: omjaju18/mongo:latest
+        image: mongo:latest
         ports:
         - containerPort: 27017
         env:
