--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -10,7 +10,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
-  - host: chat-tws.com
+  - host: chat-app.com
     http:
       paths:
       - pathType: Prefix
